--- a/frontend/AirPods.html
+++ b/frontend/AirPods.html
@@ -418,13 +418,13 @@
 
           <div class="flex gap-10 justify-center">
             <a href="#AirPodsHeader">
-              <button class="px-4 py-2 rounded-full bg-gray-100 text-lg text-gray-800 font-medium hover:bg-blue-200 transition">Apple Watch Series</button>
+              <button class="px-4 py-2 rounded-full bg-gray-100 text-lg text-gray-800 font-medium hover:bg-blue-200 transition">AirPods</button>
             </a>
             <a href="#AirPodsProHeader">
-              <button class="px-4 py-2 rounded-full bg-gray-100 text-lg text-gray-800 font-medium hover:bg-blue-200 transition">Apple Watch SE</button>
+              <button class="px-4 py-2 rounded-full bg-gray-100 text-lg text-gray-800 font-medium hover:bg-blue-200 transition">AirPods Pro</button>
             </a>
             <a href="#AirPodsMaxHeader">
-              <button class="px-4 py-2 rounded-full bg-gray-100 text-lg text-gray-800 font-medium hover:bg-blue-200 transition">Apple Watch SE</button>
+              <button class="px-4 py-2 rounded-full bg-gray-100 text-lg text-gray-800 font-medium hover:bg-blue-200 transition">AirPods Max</button>
             </a>
           </div>
           <br>
