--- a/frontend/iPad.html
+++ b/frontend/iPad.html
@@ -255,11 +255,11 @@
         <section class="max-w-[1200px] mx-auto px-4 py-8">
         <div class="header-section flex items-center justify-between">
           <h1 class="text-3xl font-bold mb-6">Khám phá sản phẩm iPad.</h1>
-          <!-- <div class="button-group flex space-x-4">
+          <div class="button-group flex space-x-4">
             <button id="btnAdd" class="px-4 py-2 rounded-full bg-gray-100 text-lg text-gray-800 font-medium hover:bg-red-200 transition">Thêm</button>
             <button id="btnOpenEdit" class="px-4 py-2 rounded-full bg-gray-100 text-lg text-gray-800 font-medium hover:bg-yellow-200 transition">Sửa</button>
             <button id="btnOpenDelete" class="px-4 py-2 rounded-full bg-gray-100 text-lg text-gray-800 font-medium hover:bg-green-200 transition">Xóa</button>
-          </div> -->
+          </div>
         </div>
 
         <!-- Nút Thêm -->
